# serialization

./: CMakeLists.txt  arc.drawio
src/: main.cpp  serialization.cpp  serialization.hpp
src/objec_model/: field_types.hpp  object_model.cpp  object_model.hpp  utilities.hpp
src/object_model/: object_model.cpp  object_model.hpp  utilities.hpp
